Horizontal scrollbar fix. (#593)

--- a/domains/eventEditor/src/ui/styles.scss
+++ b/domains/eventEditor/src/ui/styles.scss
@@ -1,5 +1,8 @@
 @import '~@eventespresso/styles/src';
 
+html.wp-toolbar {
+	overflow-x: hidden;
+}
 
 .post-type-espresso_events {
 	#adminmenuwrap {
